--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@vicons/carbon": "^0.12.0",
+    "@vicons/ionicons5": "^0.12.0",
     "naive-ui": "^2.34.3",
     "pinia": "^2.0.28",
     "vant": "^4.0.7",
