--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vant": "^4.0.7",
     "vue": "^3.2.45",
     "vue-loading-overlay": "^6.0.2",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-lazyload": "^0.3.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
